@@ -754,7 +754,7 @@ zone_cleanup(zone_type* zone)
     adapter_cleanup(zone->adoutbound);
     namedb_cleanup(zone->db);
     ixfr_cleanup(zone->ixfr);
-    xfrd_cleanup(zone->xfrd);
+    xfrd_cleanup(zone->xfrd, 1);
     notify_cleanup(zone->notify);
     signconf_cleanup(zone->signconf);
     stats_cleanup(zone->stats);
